// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HierarchichalDataTable renders correctly: hierarchichalDataTable 1`] = `
<Table
  borderless={true}
  responsiveTag="div"
  striped={true}
  tag="table"
>
  <table
    className="table table-borderless table-striped"
  >
    <thead
      id="header"
    >
      <tr>
        <th
          className="default-width"
        />
        <th
          className="default-width"
        >
          High Risk
        </th>
        <th
          className="default-width"
        >
          Low Risk
        </th>
        <th
          className="default-width"
        >
          No Risk
        </th>
        <th
          className="default-width"
        >
          Total
        </th>
      </tr>
    </thead>
    <tbody
      id="body"
    >
      <tr
        key="18"
      >
        <td
          className="default-width"
        >
          <Link
            to="/hierarchicaldata/high_risk/Total Pregnancies/1/down/18"
          >
            <a
              href="/hierarchicaldata/high_risk/Total Pregnancies/1/down/18"
              onClick={[Function]}
            >
              District D
            </a>
          </Link>
        </td>
        <td
          className="default-width "
        >
          2
        </td>
        <td
          className="default-width "
        >
          3
        </td>
        <td
          className="default-width "
        >
          4
        </td>
        <td
          className="default-width"
        >
          9
        </td>
      </tr>
      <tr
        key="1"
      >
        <td
          className="default-width"
        >
          <Link
            to="/hierarchicaldata/high_risk/Total Pregnancies/1/down/1"
          >
            <a
              href="/hierarchicaldata/high_risk/Total Pregnancies/1/down/1"
              onClick={[Function]}
            >
              District A
            </a>
          </Link>
        </td>
        <td
          className="default-width "
        >
          2
        </td>
        <td
          className="default-width "
        >
          3
        </td>
        <td
          className="default-width "
        >
          4
        </td>
        <td
          className="default-width"
        >
          9
        </td>
      </tr>
      <tr
        key="2"
      >
        <td
          className="default-width"
        >
          <Link
            to="/hierarchicaldata/high_risk/Total Pregnancies/1/down/2"
          >
            <a
              href="/hierarchicaldata/high_risk/Total Pregnancies/1/down/2"
              onClick={[Function]}
            >
              District B
            </a>
          </Link>
        </td>
        <td
          className="default-width "
        >
          2
        </td>
        <td
          className="default-width "
        >
          3
        </td>
        <td
          className="default-width "
        >
          4
        </td>
        <td
          className="default-width"
        >
          9
        </td>
      </tr>
      <tr
        key="3"
      >
        <td
          className="default-width"
        >
          <Link
            to="/hierarchicaldata/high_risk/Total Pregnancies/1/down/3"
          >
            <a
              href="/hierarchicaldata/high_risk/Total Pregnancies/1/down/3"
              onClick={[Function]}
            >
              District C
            </a>
          </Link>
        </td>
        <td
          className="default-width "
        >
          2
        </td>
        <td
          className="default-width "
        >
          3
        </td>
        <td
          className="default-width "
        >
          4
        </td>
        <td
          className="default-width"
        >
          9
        </td>
      </tr>
      <tr
        key="total"
      >
        <td
          className="default-width"
          id="total"
        >
          Total(
          Province
          )
        </td>
        <td
          className="default-width "
        >
          8
        </td>
        <td
          className="default-width "
        >
          12
        </td>
        <td
          className="default-width "
        >
          16
        </td>
        <td
          className="default-width"
        >
          36
        </td>
      </tr>
    </tbody>
  </table>
</Table>
`;

exports[`HierarchichalDataTable renders correctly: hierarchichalDataTable 2`] = `
<tbody
  id="body"
>
  <tr
    key="6"
  >
    <td
      className="default-width"
    >
      <Link
        to="/hierarchicaldata/high_risk/Total Pregnancies/2/down/6"
      >
        <a
          href="/hierarchicaldata/high_risk/Total Pregnancies/2/down/6"
          onClick={[Function]}
        >
          HF 2
        </a>
      </Link>
    </td>
    <td
      className="default-width "
    >
      2
    </td>
    <td
      className="default-width "
    >
      3
    </td>
    <td
      className="default-width "
    >
      4
    </td>
    <td
      className="default-width"
    >
      9
    </td>
  </tr>
  <tr
    key="4"
  >
    <td
      className="default-width"
    >
      <Link
        to="/hierarchicaldata/high_risk/Total Pregnancies/2/down/4"
      >
        <a
          href="/hierarchicaldata/high_risk/Total Pregnancies/2/down/4"
          onClick={[Function]}
        >
          HFC 1
        </a>
      </Link>
    </td>
    <td
      className="default-width "
    >
      2
    </td>
    <td
      className="default-width "
    >
      3
    </td>
    <td
      className="default-width "
    >
      4
    </td>
    <td
      className="default-width"
    >
      9
    </td>
  </tr>
  <tr
    key="total"
  >
    <td
      className="default-width"
      id="total"
    >
      Total(
      District
      )
    </td>
    <td
      className="default-width "
    >
      4
    </td>
    <td
      className="default-width "
    >
      6
    </td>
    <td
      className="default-width "
    >
      8
    </td>
    <td
      className="default-width"
    >
      18
    </td>
  </tr>
</tbody>
`;

exports[`HierarchichalDataTable renders correctly: hierarchichalDataTable 3`] = `
<tbody
  id="body"
>
  <tr
    key="13"
  >
    <td
      className="default-width"
    >
      <Link
        to="/hierarchicaldata/high_risk/Total Pregnancies/3/down/13"
      >
        <a
          href="/hierarchicaldata/high_risk/Total Pregnancies/3/down/13"
          onClick={[Function]}
        >
          Operational Area 13
        </a>
      </Link>
    </td>
    <td
      className="default-width "
    >
      2
    </td>
    <td
      className="default-width "
    >
      3
    </td>
    <td
      className="default-width "
    >
      4
    </td>
    <td
      className="default-width"
    >
      9
    </td>
  </tr>
  <tr
    key="14"
  >
    <td
      className="default-width"
    >
      <Link
        to="/hierarchicaldata/high_risk/Total Pregnancies/3/down/14"
      >
        <a
          href="/hierarchicaldata/high_risk/Total Pregnancies/3/down/14"
          onClick={[Function]}
        >
          Operational Area 14
        </a>
      </Link>
    </td>
    <td
      className="default-width "
    >
      2
    </td>
    <td
      className="default-width "
    >
      3
    </td>
    <td
      className="default-width "
    >
      4
    </td>
    <td
      className="default-width"
    >
      9
    </td>
  </tr>
  <tr
    key="17"
  >
    <td
      className="default-width"
    >
      <Link
        to="/hierarchicaldata/high_risk/Total Pregnancies/3/down/17"
      >
        <a
          href="/hierarchicaldata/high_risk/Total Pregnancies/3/down/17"
          onClick={[Function]}
        >
          Operational Area 17
        </a>
      </Link>
    </td>
    <td
      className="default-width "
    >
      2
    </td>
    <td
      className="default-width "
    >
      3
    </td>
    <td
      className="default-width "
    >
      4
    </td>
    <td
      className="default-width"
    >
      9
    </td>
  </tr>
  <tr
    key="18"
  >
    <td
      className="default-width"
    >
      <Link
        to="/hierarchicaldata/high_risk/Total Pregnancies/3/down/18"
      >
        <a
          href="/hierarchicaldata/high_risk/Total Pregnancies/3/down/18"
          onClick={[Function]}
        >
          Operational Area 18
        </a>
      </Link>
    </td>
    <td
      className="default-width "
    >
      2
    </td>
    <td
      className="default-width "
    >
      3
    </td>
    <td
      className="default-width "
    >
      4
    </td>
    <td
      className="default-width"
    >
      9
    </td>
  </tr>
  <tr
    key="15"
  >
    <td
      className="default-width"
    >
      <Link
        to="/hierarchicaldata/high_risk/Total Pregnancies/3/down/15"
      >
        <a
          href="/hierarchicaldata/high_risk/Total Pregnancies/3/down/15"
          onClick={[Function]}
        >
          Operational Area 15
        </a>
      </Link>
    </td>
    <td
      className="default-width "
    >
      2
    </td>
    <td
      className="default-width "
    >
      3
    </td>
    <td
      className="default-width "
    >
      4
    </td>
    <td
      className="default-width"
    >
      9
    </td>
  </tr>
  <tr
    key="16"
  >
    <td
      className="default-width"
    >
      <Link
        to="/hierarchicaldata/high_risk/Total Pregnancies/3/down/16"
      >
        <a
          href="/hierarchicaldata/high_risk/Total Pregnancies/3/down/16"
          onClick={[Function]}
        >
          Operational Area 16
        </a>
      </Link>
    </td>
    <td
      className="default-width "
    >
      2
    </td>
    <td
      className="default-width "
    >
      3
    </td>
    <td
      className="default-width "
    >
      4
    </td>
    <td
      className="default-width"
    >
      9
    </td>
  </tr>
  <tr
    key="total"
  >
    <td
      className="default-width"
      id="total"
    >
      Total(
      Commune
      )
    </td>
    <td
      className="default-width "
    >
      12
    </td>
    <td
      className="default-width "
    >
      18
    </td>
    <td
      className="default-width "
    >
      24
    </td>
    <td
      className="default-width"
    >
      54
    </td>
  </tr>
</tbody>
`;

exports[`HierarchichalDataTable renders correctly: hierarchichalDataTable 4`] = `
<tbody
  id="body"
>
  <tr
    key="22"
  >
    <td
      className="default-width"
    >
      <Link
        to="/hierarchicaldata/high_risk/Total Pregnancies/4/down/22"
      >
        <a
          href="/hierarchicaldata/high_risk/Total Pregnancies/4/down/22"
          onClick={[Function]}
        >
          HFC 1
        </a>
      </Link>
    </td>
    <td
      className="default-width "
    >
      2
    </td>
    <td
      className="default-width "
    >
      3
    </td>
    <td
      className="default-width "
    >
      4
    </td>
    <td
      className="default-width"
    >
      9
    </td>
  </tr>
  <tr
    key="total"
  >
    <td
      className="default-width"
      id="total"
    >
      Total(
      Village
      )
    </td>
    <td
      className="default-width "
    >
      2
    </td>
    <td
      className="default-width "
    >
      3
    </td>
    <td
      className="default-width "
    >
      4
    </td>
    <td
      className="default-width"
    >
      9
    </td>
  </tr>
</tbody>
`;

exports[`HierarchichalDataTable renders correctly: hierarchichalDataTable 5`] = `
<tbody
  id="body"
>
  <tr
    key="13"
  >
    <td
      className="default-width"
    >
      <Link
        to="/hierarchicaldata/high_risk/Total Pregnancies/3/down/13"
      >
        <a
          href="/hierarchicaldata/high_risk/Total Pregnancies/3/down/13"
          onClick={[Function]}
        >
          Operational Area 13
        </a>
      </Link>
    </td>
    <td
      className="default-width "
    >
      2
    </td>
    <td
      className="default-width "
    >
      3
    </td>
    <td
      className="default-width "
    >
      4
    </td>
    <td
      className="default-width"
    >
      9
    </td>
  </tr>
  <tr
    key="14"
  >
    <td
      className="default-width"
    >
      <Link
        to="/hierarchicaldata/high_risk/Total Pregnancies/3/down/14"
      >
        <a
          href="/hierarchicaldata/high_risk/Total Pregnancies/3/down/14"
          onClick={[Function]}
        >
          Operational Area 14
        </a>
      </Link>
    </td>
    <td
      className="default-width "
    >
      2
    </td>
    <td
      className="default-width "
    >
      3
    </td>
    <td
      className="default-width "
    >
      4
    </td>
    <td
      className="default-width"
    >
      9
    </td>
  </tr>
  <tr
    key="17"
  >
    <td
      className="default-width"
    >
      <Link
        to="/hierarchicaldata/high_risk/Total Pregnancies/3/down/17"
      >
        <a
          href="/hierarchicaldata/high_risk/Total Pregnancies/3/down/17"
          onClick={[Function]}
        >
          Operational Area 17
        </a>
      </Link>
    </td>
    <td
      className="default-width "
    >
      2
    </td>
    <td
      className="default-width "
    >
      3
    </td>
    <td
      className="default-width "
    >
      4
    </td>
    <td
      className="default-width"
    >
      9
    </td>
  </tr>
  <tr
    key="18"
  >
    <td
      className="default-width"
    >
      <Link
        to="/hierarchicaldata/high_risk/Total Pregnancies/3/down/18"
      >
        <a
          href="/hierarchicaldata/high_risk/Total Pregnancies/3/down/18"
          onClick={[Function]}
        >
          Operational Area 18
        </a>
      </Link>
    </td>
    <td
      className="default-width "
    >
      2
    </td>
    <td
      className="default-width "
    >
      3
    </td>
    <td
      className="default-width "
    >
      4
    </td>
    <td
      className="default-width"
    >
      9
    </td>
  </tr>
  <tr
    key="15"
  >
    <td
      className="default-width"
    >
      <Link
        to="/hierarchicaldata/high_risk/Total Pregnancies/3/down/15"
      >
        <a
          href="/hierarchicaldata/high_risk/Total Pregnancies/3/down/15"
          onClick={[Function]}
        >
          Operational Area 15
        </a>
      </Link>
    </td>
    <td
      className="default-width "
    >
      2
    </td>
    <td
      className="default-width "
    >
      3
    </td>
    <td
      className="default-width "
    >
      4
    </td>
    <td
      className="default-width"
    >
      9
    </td>
  </tr>
  <tr
    key="16"
  >
    <td
      className="default-width"
    >
      <Link
        to="/hierarchicaldata/high_risk/Total Pregnancies/3/down/16"
      >
        <a
          href="/hierarchicaldata/high_risk/Total Pregnancies/3/down/16"
          onClick={[Function]}
        >
          Operational Area 16
        </a>
      </Link>
    </td>
    <td
      className="default-width "
    >
      2
    </td>
    <td
      className="default-width "
    >
      3
    </td>
    <td
      className="default-width "
    >
      4
    </td>
    <td
      className="default-width"
    >
      9
    </td>
  </tr>
  <tr
    key="total"
  >
    <td
      className="default-width"
      id="total"
    >
      Total(
      Commune
      )
    </td>
    <td
      className="default-width "
    >
      12
    </td>
    <td
      className="default-width "
    >
      18
    </td>
    <td
      className="default-width "
    >
      24
    </td>
    <td
      className="default-width"
    >
      54
    </td>
  </tr>
</tbody>
`;

exports[`HierarchichalDataTable renders correctly: hierarchichalDataTable 6`] = `
<tbody
  id="body"
>
  <tr
    key="6"
  >
    <td
      className="default-width"
    >
      <Link
        to="/hierarchicaldata/high_risk/Total Pregnancies/2/down/6"
      >
        <a
          href="/hierarchicaldata/high_risk/Total Pregnancies/2/down/6"
          onClick={[Function]}
        >
          HF 2
        </a>
      </Link>
    </td>
    <td
      className="default-width "
    >
      2
    </td>
    <td
      className="default-width "
    >
      3
    </td>
    <td
      className="default-width "
    >
      4
    </td>
    <td
      className="default-width"
    >
      9
    </td>
  </tr>
  <tr
    key="4"
  >
    <td
      className="default-width"
    >
      <Link
        to="/hierarchicaldata/high_risk/Total Pregnancies/2/down/4"
      >
        <a
          href="/hierarchicaldata/high_risk/Total Pregnancies/2/down/4"
          onClick={[Function]}
        >
          HFC 1
        </a>
      </Link>
    </td>
    <td
      className="default-width "
    >
      2
    </td>
    <td
      className="default-width "
    >
      3
    </td>
    <td
      className="default-width "
    >
      4
    </td>
    <td
      className="default-width"
    >
      9
    </td>
  </tr>
  <tr
    key="total"
  >
    <td
      className="default-width"
      id="total"
    >
      Total(
      District
      )
    </td>
    <td
      className="default-width "
    >
      4
    </td>
    <td
      className="default-width "
    >
      6
    </td>
    <td
      className="default-width "
    >
      8
    </td>
    <td
      className="default-width"
    >
      18
    </td>
  </tr>
</tbody>
`;

exports[`HierarchichalDataTable renders correctly: hierarchichalDataTable 7`] = `
<tbody
  id="body"
>
  <tr
    key="18"
  >
    <td
      className="default-width"
    >
      <Link
        to="/hierarchicaldata/high_risk/Total Pregnancies/1/down/18"
      >
        <a
          href="/hierarchicaldata/high_risk/Total Pregnancies/1/down/18"
          onClick={[Function]}
        >
          District D
        </a>
      </Link>
    </td>
    <td
      className="default-width "
    >
      2
    </td>
    <td
      className="default-width "
    >
      3
    </td>
    <td
      className="default-width "
    >
      4
    </td>
    <td
      className="default-width"
    >
      9
    </td>
  </tr>
  <tr
    key="1"
  >
    <td
      className="default-width"
    >
      <Link
        to="/hierarchicaldata/high_risk/Total Pregnancies/1/down/1"
      >
        <a
          href="/hierarchicaldata/high_risk/Total Pregnancies/1/down/1"
          onClick={[Function]}
        >
          District A
        </a>
      </Link>
    </td>
    <td
      className="default-width "
    >
      2
    </td>
    <td
      className="default-width "
    >
      3
    </td>
    <td
      className="default-width "
    >
      4
    </td>
    <td
      className="default-width"
    >
      9
    </td>
  </tr>
  <tr
    key="2"
  >
    <td
      className="default-width"
    >
      <Link
        to="/hierarchicaldata/high_risk/Total Pregnancies/1/down/2"
      >
        <a
          href="/hierarchicaldata/high_risk/Total Pregnancies/1/down/2"
          onClick={[Function]}
        >
          District B
        </a>
      </Link>
    </td>
    <td
      className="default-width "
    >
      2
    </td>
    <td
      className="default-width "
    >
      3
    </td>
    <td
      className="default-width "
    >
      4
    </td>
    <td
      className="default-width"
    >
      9
    </td>
  </tr>
  <tr
    key="3"
  >
    <td
      className="default-width"
    >
      <Link
        to="/hierarchicaldata/high_risk/Total Pregnancies/1/down/3"
      >
        <a
          href="/hierarchicaldata/high_risk/Total Pregnancies/1/down/3"
          onClick={[Function]}
        >
          District C
        </a>
      </Link>
    </td>
    <td
      className="default-width "
    >
      2
    </td>
    <td
      className="default-width "
    >
      3
    </td>
    <td
      className="default-width "
    >
      4
    </td>
    <td
      className="default-width"
    >
      9
    </td>
  </tr>
  <tr
    key="total"
  >
    <td
      className="default-width"
      id="total"
    >
      Total(
      Province
      )
    </td>
    <td
      className="default-width "
    >
      8
    </td>
    <td
      className="default-width "
    >
      12
    </td>
    <td
      className="default-width "
    >
      16
    </td>
    <td
      className="default-width"
    >
      36
    </td>
  </tr>
</tbody>
`;

exports[`HierarchichalDataTable renders correctly: hierarchichalDataTable 8`] = `
<tbody
  id="body"
>
  <tr
    key="6"
  >
    <td
      className="default-width"
    >
      <Link
        to="/hierarchicaldata/high_risk/Total Pregnancies/2/down/6"
      >
        <a
          href="/hierarchicaldata/high_risk/Total Pregnancies/2/down/6"
          onClick={[Function]}
        >
          HF 2
        </a>
      </Link>
    </td>
    <td
      className="default-width "
    >
      2
    </td>
    <td
      className="default-width "
    >
      3
    </td>
    <td
      className="default-width "
    >
      4
    </td>
    <td
      className="default-width"
    >
      9
    </td>
  </tr>
  <tr
    key="4"
  >
    <td
      className="default-width"
    >
      <Link
        to="/hierarchicaldata/high_risk/Total Pregnancies/2/down/4"
      >
        <a
          href="/hierarchicaldata/high_risk/Total Pregnancies/2/down/4"
          onClick={[Function]}
        >
          HFC 1
        </a>
      </Link>
    </td>
    <td
      className="default-width "
    >
      2
    </td>
    <td
      className="default-width "
    >
      3
    </td>
    <td
      className="default-width "
    >
      4
    </td>
    <td
      className="default-width"
    >
      9
    </td>
  </tr>
  <tr
    key="total"
  >
    <td
      className="default-width"
      id="total"
    >
      Total(
      District
      )
    </td>
    <td
      className="default-width "
    >
      4
    </td>
    <td
      className="default-width "
    >
      6
    </td>
    <td
      className="default-width "
    >
      8
    </td>
    <td
      className="default-width"
    >
      18
    </td>
  </tr>
</tbody>
`;

exports[`HierarchichalDataTable renders correctly: hierarchichalDataTable 9`] = `
<tbody
  id="body"
>
  <tr
    key="18"
  >
    <td
      className="default-width"
    >
      <Link
        to="/hierarchicaldata/high_risk/Total Pregnancies/1/down/18"
      >
        <a
          href="/hierarchicaldata/high_risk/Total Pregnancies/1/down/18"
          onClick={[Function]}
        >
          District D
        </a>
      </Link>
    </td>
    <td
      className="default-width "
    >
      2
    </td>
    <td
      className="default-width "
    >
      3
    </td>
    <td
      className="default-width "
    >
      4
    </td>
    <td
      className="default-width"
    >
      9
    </td>
  </tr>
  <tr
    key="1"
  >
    <td
      className="default-width"
    >
      <Link
        to="/hierarchicaldata/high_risk/Total Pregnancies/1/down/1"
      >
        <a
          href="/hierarchicaldata/high_risk/Total Pregnancies/1/down/1"
          onClick={[Function]}
        >
          District A
        </a>
      </Link>
    </td>
    <td
      className="default-width "
    >
      2
    </td>
    <td
      className="default-width "
    >
      3
    </td>
    <td
      className="default-width "
    >
      4
    </td>
    <td
      className="default-width"
    >
      9
    </td>
  </tr>
  <tr
    key="2"
  >
    <td
      className="default-width"
    >
      <Link
        to="/hierarchicaldata/high_risk/Total Pregnancies/1/down/2"
      >
        <a
          href="/hierarchicaldata/high_risk/Total Pregnancies/1/down/2"
          onClick={[Function]}
        >
          District B
        </a>
      </Link>
    </td>
    <td
      className="default-width "
    >
      2
    </td>
    <td
      className="default-width "
    >
      3
    </td>
    <td
      className="default-width "
    >
      4
    </td>
    <td
      className="default-width"
    >
      9
    </td>
  </tr>
  <tr
    key="3"
  >
    <td
      className="default-width"
    >
      <Link
        to="/hierarchicaldata/high_risk/Total Pregnancies/1/down/3"
      >
        <a
          href="/hierarchicaldata/high_risk/Total Pregnancies/1/down/3"
          onClick={[Function]}
        >
          District C
        </a>
      </Link>
    </td>
    <td
      className="default-width "
    >
      2
    </td>
    <td
      className="default-width "
    >
      3
    </td>
    <td
      className="default-width "
    >
      4
    </td>
    <td
      className="default-width"
    >
      9
    </td>
  </tr>
  <tr
    key="total"
  >
    <td
      className="default-width"
      id="total"
    >
      Total(
      Province
      )
    </td>
    <td
      className="default-width "
    >
      8
    </td>
    <td
      className="default-width "
    >
      12
    </td>
    <td
      className="default-width "
    >
      16
    </td>
    <td
      className="default-width"
    >
      36
    </td>
  </tr>
</tbody>
`;
